--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-    <h1>Featured books</h1>
-    <div>
-      <img src="images/placeholder-2by3.svg" alt="">
-      <h2>The Quest for Anderon</h2>
-      <h3><i>Tabatha R. Barrett</i></h3>
-      <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-      <a href="#">Read now</a>
-    </div>
-    <div>
-      <img src="images/placeholder-2by3.svg" alt="">
-      <h2>Dinosaur Knights</h2>
-      <h3><i>Thomas S. Hedegaard</i></h3>
-      <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-      <a href="#">Read now</a>
-    </div>
-    <div>
-      <img src="images/placeholder-2by3.svg" alt="">
-      <h2>The Black Dragon</h2>
-      <h3><i>Hana Čejková</i></h3>
-      <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-      <a href="#">Read now</a>
-    </div>
-    <div>
-      <img src="images/placeholder-2by3.svg" alt="">
-      <h2>Felicity Orta Olivárez</h2>
-      <h3><i>Tabatha R. Barrett</i></h3>
-      <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-      <a href="#">Read now</a>
-    </div>
-  </header>
+    <h2>Featured books</h2>
+    <section>
+      <div class="quest">
+        <img src="images/placeholder-2by3.svg" alt="">
+        <h3>The Quest for Anderon</h3>
+        <cite><i>Tabatha R. Barrett</i></cite>
+        <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+        <a class=".btn" href="#">Read now</a>
+      </div>
+      <div class="dinosaur">
+        <img src="images/placeholder-2by3.svg" alt="">
+        <h3>Dinosaur Knights</h3>
+        <cite><i>Thomas S. Hedegaard</i></cite>
+        <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
+        <a class=".btn" href="#">Read now</a>
+      </div>
+      <div class="dragon">
+        <img src="images/placeholder-2by3.svg" alt="">
+        <h3>The Black Dragon</h3>
+        <cite><i>Hana Čejková</i></cite>
+        <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
+        <a class=".btn .btn-small" href="#">Read now</a>
+      </div>
+      <div class="orta">
+        <img src="images/placeholder-2by3.svg" alt="">
+        <h3>Felicity Orta Olivárez</h3>
+        <cite><i>Tabatha R. Barrett</i></cite>
+        <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
+        <a class=".btn .btn-small" href="#">Read now</a>
+        </div>
+    </section>
 </body>
 </html>
