--- a/index.html
+++ b/index.html
@@ -5,38 +5,39 @@
   <title>Featured books</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h2>Featured books</h2>
     <section>
-      <div class="quest">
+      <div class="quest card">
         <img src="images/placeholder-2by3.svg" alt="">
         <h3>The Quest for Anderon</h3>
         <cite><i>Tabatha R. Barrett</i></cite>
         <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-        <a class=".btn" href="#">Read now</a>
+        <a class="btn" href="#">Read now</a>
       </div>
-      <div class="dinosaur">
+      <div class="dinosaur card">
         <img src="images/placeholder-2by3.svg" alt="">
         <h3>Dinosaur Knights</h3>
         <cite><i>Thomas S. Hedegaard</i></cite>
         <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-        <a class=".btn" href="#">Read now</a>
+        <a class="btn" href="#">Read now</a>
       </div>
-      <div class="dragon">
+      <div class="dragon card">
         <img src="images/placeholder-2by3.svg" alt="">
         <h3>The Black Dragon</h3>
         <cite><i>Hana Čejková</i></cite>
         <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-        <a class=".btn .btn-small" href="#">Read now</a>
+        <a class="btn btn-small" href="#">Read now</a>
       </div>
-      <div class="orta">
+      <div class="orta card">
         <img src="images/placeholder-2by3.svg" alt="">
         <h3>Felicity Orta Olivárez</h3>
         <cite><i>Tabatha R. Barrett</i></cite>
         <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-        <a class=".btn .btn-small" href="#">Read now</a>
+        <a class="btn btn-small" href="#">Read now</a>
         </div>
     </section>
 </body>
