--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 </head>
 <body>
-    <h2>Featured books</h2>
-    <section>
+  <h2>Featured books</h2>
+  <section>
+    <div class="cards">
       <div class="quest card">
         <img src="images/placeholder-2by3.svg" alt="">
         <h3>The Quest for Anderon</h3>
@@ -32,13 +33,14 @@
         <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
         <a class="btn btn-small" href="#">Read now</a>
       </div>
-      <div class="orta card">
+      <div class="laser card">
         <img src="images/placeholder-2by3.svg" alt="">
-        <h3>Felicity Orta Olivárez</h3>
-        <cite><i>Tabatha R. Barrett</i></cite>
+        <h3>Light Speed Laser Ships</h3>
+        <cite><i>Felicity Orta Olivárez</i></cite>
         <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
         <a class="btn btn-small" href="#">Read now</a>
-        </div>
-    </section>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
